Translations and helpful util.

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -849,7 +849,7 @@
 "attachmentType.ennakkoluvat_ja_lausunnot.elyn_tai_kunnan_poikkeamapaatos.info" "fi" "Jos hankkeessa on haettu ELY:n tai kunnan poikkeamispäätös muuten kuin Lupapisteen kautta"
 "attachmentType.ennakkoluvat_ja_lausunnot.elyn_tai_kunnan_poikkeamapaatos.info" "sv" "Om man har ansökt om kommunens eller ELYs undantagsbeslut på annat sätt än via Lupapiste"
 "attachmentType.ennakkoluvat_ja_lausunnot.lausunto.info" "fi" "Jos hankkeeseen on annettu lausunto"
-"attachmentType.ennakkoluvat_ja_lausunnot.lausunto.info" "sv" ""
+"attachmentType.ennakkoluvat_ja_lausunnot.lausunto.info" "sv" "Om ett utlåtande getts om projektet"
 "attachmentType.ennakkoluvat_ja_lausunnot.naapurien_suostumukset.info" "fi" "Jos hankkeessa tulee hankkia naapurien suostumus"
 "attachmentType.ennakkoluvat_ja_lausunnot.naapurien_suostumukset.info" "sv" "Om man måste inhämta grannarnas samtycke i projektet"
 "attachmentType.ennakkoluvat_ja_lausunnot.selvitys_naapurien_kuulemisesta.info" "fi" "Kuulemiskirjeet liitettävä, jos hakija on kuullut naapurit. Ei tarpeen = Viranomainen harkitsee tarpeellisuuden"
@@ -1427,39 +1427,39 @@
 "auth-admin.locked" "fi" "Lukittu"
 "auth-admin.locked" "sv" "Låst"
 "auth-admin.municipality-maps.add" "fi" "Lisää taso"
-"auth-admin.municipality-maps.add" "sv" ""
+"auth-admin.municipality-maps.add" "sv" "Lägg till lager"
 "auth-admin.municipality-maps.asemakaava" "fi" "Asemakaava"
 "auth-admin.municipality-maps.asemakaava" "sv" "Detaljplan"
 "auth-admin.municipality-maps.bad-data" "fi" "Väärä formaatti. Ainoastaan WMS-muotoinen karttadata on tuettu."
-"auth-admin.municipality-maps.bad-data" "sv" ""
+"auth-admin.municipality-maps.bad-data" "sv" "Fel format. Endast kartdata av typen WMS stöds."
 "auth-admin.municipality-maps.error" "fi" "Karttatasojen haku epäonnistui"
-"auth-admin.municipality-maps.error" "sv" ""
+"auth-admin.municipality-maps.error" "sv" "Sökning av kartlager misslyckades"
 "auth-admin.municipality-maps.fetch" "fi" "Tallenna asetukset ja hae karttatasot"
-"auth-admin.municipality-maps.fetch" "sv" ""
+"auth-admin.municipality-maps.fetch" "sv" "Spara inställningarna och sök kartlager"
 "auth-admin.municipality-maps.help" "fi" "Voit lisätä organisaation omia karttatasoja. Tasot näytetään Oskari-kartalla eli isolla kartalla, joka avautuu hakemusten pikkukartan Avaa kartta -napista. <p><b>Huom:</b> Toistaiseksi ainoastaan Web Map Service (WMS) -karttapalvelimet ovat tuettuja.</p>"
-"auth-admin.municipality-maps.help" "sv" ""
+"auth-admin.municipality-maps.help" "sv" "Du kan lägga till organisationens egna kartlager. Lagren visas på Oskari-kartan d.v.s. på den stora kartan som öppnas via ansökningarnas lilla karta och knappen Öppna karta. <p><b>Obs:</b> Tillsvidare stöds endast Web Map Service (WMS) -kartserverar. </p>"
 "auth-admin.municipality-maps.kantakartta" "fi" "Kantakartta"
 "auth-admin.municipality-maps.kantakartta" "sv" "Baskarta"
 "auth-admin.municipality-maps.layer" "fi" "Taso"
-"auth-admin.municipality-maps.layer" "sv" ""
+"auth-admin.municipality-maps.layer" "sv" "Lager"
 "auth-admin.municipality-maps.layername" "fi" "Tason nimi"
-"auth-admin.municipality-maps.layername" "sv" ""
+"auth-admin.municipality-maps.layername" "sv" "Namn på lagret"
 "auth-admin.municipality-maps.layers" "fi" "Tasot"
-"auth-admin.municipality-maps.layers" "sv" ""
+"auth-admin.municipality-maps.layers" "sv" "Lager"
 "auth-admin.municipality-maps.password" "fi" "Salasana (jos tarpeen)"
-"auth-admin.municipality-maps.password" "sv" ""
+"auth-admin.municipality-maps.password" "sv" "Lösenord (ifall nödvändigt)"
 "auth-admin.municipality-maps.preview" "fi" "Esikatselu"
-"auth-admin.municipality-maps.preview" "sv" ""
+"auth-admin.municipality-maps.preview" "sv" "Förhandsgranskning"
 "auth-admin.municipality-maps.server-details" "fi" "Karttapalvelimen tiedot"
-"auth-admin.municipality-maps.server-details" "sv" ""
+"auth-admin.municipality-maps.server-details" "sv" "Kartserverns uppgifter"
 "auth-admin.municipality-maps.taustakartta" "fi" "Taustakartta"
-"auth-admin.municipality-maps.taustakartta" "sv" ""
+"auth-admin.municipality-maps.taustakartta" "sv" "Bakgrundskarta"
 "auth-admin.municipality-maps.title" "fi" "Kunnan omat kartta-aineistot"
-"auth-admin.municipality-maps.title" "sv" ""
+"auth-admin.municipality-maps.title" "sv" "Kommunens eget kartmaterial"
 "auth-admin.municipality-maps.url" "fi" "Karttapalvelimen osoite (URL)"
-"auth-admin.municipality-maps.url" "sv" ""
+"auth-admin.municipality-maps.url" "sv" "Kartserverns adress (URL)"
 "auth-admin.municipality-maps.username" "fi" "Käyttäjätunnus (jos tarpeen)"
-"auth-admin.municipality-maps.username" "sv" ""
+"auth-admin.municipality-maps.username" "sv" "Användarnamn (om nödvändigt)"
 "auth-admin.notSet" "fi" "Ei asetettu"
 "auth-admin.notSet" "sv" "Obestämd"
 "auth-admin.operations-attachments" "fi" "Liitteet toimenpiteisiin"
@@ -1555,23 +1555,23 @@
 "auto-katos._group_label" "fi" "Auto- tai grillikatoksen, vajan, kioskin tai vastaavan rakentaminen"
 "auto-katos._group_label" "sv" "Byggande av bil- eller grilltak, skjul, kiosk eller motsvarande"
 "available-materials.contact" "fi" "Myytävät/lahjoitettavat materiaalit"
-"available-materials.contact" "sv" ""
+"available-materials.contact" "sv" "Material som ska säljas/skänkas"
 "available-materials._group_label" "fi" "Materiaalit"
-"available-materials._group_label" "sv" ""
+"available-materials._group_label" "sv" "Material"
 "available-materials.aines" "fi" "Aines"
-"available-materials.aines" "sv" ""
+"available-materials.aines" "sv" "Ämne"
 "available-materials.maara" "fi" "Määrä"
-"available-materials.maara" "sv" ""
+"available-materials.maara" "sv" "Mängd"
 "available-materials.yksikko" "fi" "Yksikkö"
-"available-materials.yksikko" "sv" ""
+"available-materials.yksikko" "sv" "Enhet"
 "available-materials.saatavilla" "fi" "Saatavilla"
-"available-materials.saatavilla" "sv" ""
+"available-materials.saatavilla" "sv" "Tillgänglig"
 "available-materials.kuvaus" "fi" "Kuvaus"
-"available-materials.kuvaus" "sv" ""
+"available-materials.kuvaus" "sv" "Beskrivning"
 "available-materials._append_label" "fi" "Lisää rivi"
-"available-materials._append_label" "sv" ""
+"available-materials._append_label" "sv" "Lägg till rad"
 "available-materials._copy_label" "fi" "Kopioi rivi"
-"available-materials._copy_label" "sv" ""
+"available-materials._copy_label" "sv" "Kopiera rad"
 "B0" "fi" "B0 (1000 x 1414 mm)"
 "B0" "sv" "B0 (1000 x 1414 mm)"
 "B1" "fi" "B1 (707 x 1000 mm)"
@@ -1693,7 +1693,7 @@
 "bulletin.proclaimedHeader.duringProclamation" "fi" "Hakemuksen kuulutusaikana"
 "bulletin.proclaimedHeader.duringProclamation" "sv" "Synpunkter och anmärkningar som avgetts under den tid ansökan varit kungjord, sammanlagt antal"
 "bulletin.proclaimedHeader.givenComments" "fi" "annettuja mielipiteitä ja muistutuksia yhteensä"
-"bulletin.proclaimedHeader.givenComments" "sv" ""
+"bulletin.proclaimedHeader.givenComments" "sv" "tillsammans givna åsikter och påminnelser"
 "bulletin.proclamation.endsAt" "fi" "Kuulutus päättyy"
 "bulletin.proclamation.endsAt" "sv" "Kungörelsen slutar"
 "bulletin.proclamation.proclaimAgain" "fi" "Kuuluta uudelleen"
@@ -1921,7 +1921,7 @@
 "constructionStarted.title" "fi" "Hakemus siirtyy Rakennustyöt aloitettu -tilaan, kun aloitusilmoitus on annettu."
 "constructionStarted.title" "sv" "Ansökan övergår i statusen \"Byggnadsarbeten påbörjade\" när anmälan om påbörjande har gjorts."
 "contact.help" "fi" "Voit tiedottaa Lupapisteen kautta myynnissä olevista tai lahjoitettavista rakennusjätteistä."
-"contact.help" "sv" ""
+"contact.help" "sv" "Via Lupapiste kan du informera om byggnadsavfall som är till salu eller skänkes."
 "continue" "fi" "Jatka"
 "continue" "sv" "Fortsätt"
 "conversation.attachment.toggle" "fi" "Näytä liitteiden kommentointi"
@@ -2515,6 +2515,7 @@
 "help.bulletin.state.verdictGiven" "fi" "Kun hakemuksesta julkaistaan päätös:<br/>- Julkipano-sivustolle viedään Lupapisteessä oleva päätös liitteineen<br/>- Hakemustiedot poistuvat Julkipano-sivustolta"
 "help.bulletin.state.verdictGiven" "sv" "När beslutet om ansökan har kungjorts:<br/>-Beslutet med bilagor överförs från Lupapiste till Anslag-sajten<br/>- Ansökan försvinner från Anslag-sajten"
 "help.KT.AddOperations" "fi" "Voit liittää samaan hakemukseen useamman kiinteistönmuodostuksen ja rasitetoimituksen. Mikäli toimenpide liittyy useampaan kiinteistöön (kuten esimerkiksi rasitetoimitus), niin voit lisätä uusia kohdekiinteistöjä ylläolevalla Lisää kohdekiinteistö -napilla."
+"help.KT.AddOperations" "sv" "Till samma ansökan kan du bifoga flera fastighetsbildningar och servitutsförrättningar. Ifall åtgärden gäller flera fastigheter (som exempelvis en servitutsförrättning) kan du lägga till nya fastighetsobjekt via knappen Lägg till fastighetsobjekt här ovanom."
 "help.KT.applicationInfoDesc" "fi" "Tällä välilehdellä näet valitsemaasi toimenpiteeseen liittyvät lomaketiedot. Osioon tallennettavat tiedot välittyvät kunnan kautta eri viranomaisten järjestelmiin."
 "help.KT.applicationInfoDesc" "sv" "Under denna flik ser du alla blankettuppgifter med anknytning till den åtgärd du valt. De uppgifter som sparas här överförs via kommunen till olika myndigheters system."
 "help.KT.applicationSummaryDesc" "fi" "Tällä välilehdellä näet hankkeeseesi liittyvät hakemuksen aikaiset tiedot."
@@ -3174,7 +3175,7 @@
 "mypage.quality.poor" "fi" "Liian heikko"
 "mypage.quality.poor" "sv" "För dålig"
 "mypage.ytunnus.placeholder" "fi" "Kirjoita muodossa 1234567-8"
-"mypage.ytunnus.placeholder" "sv" ""
+"mypage.ytunnus.placeholder" "sv" "Skriv i formen 1234567-8"
 "neighbor.invite.failed.long" "fi" "Ota yhteyttä naapuriisi tai kunnan viranomaiseen."
 "neighbor.invite.failed.long" "sv" "Ta kontakt med din granne eller kommunens myndigheten."
 "neighbor.owners.title" "fi" "Omistajatiedot"
@@ -3743,8 +3744,8 @@
 "register.company.add-user.searchUser" "sv" "Fortsätt"
 "register.company.add-user.submit" "fi" "Kutsu"
 "register.company.add-user.submit" "sv" "Inbjudan"
-"register.company.create.help!" "fi" "Jos sinulla on jo käyttäjätili Lupapisteessä, pystyt rekisteröimään Yritystilin <a href=\"https://www.lupapiste.fi/ohjeet/yrityksille/yritystilin-rekisterointi-ja-kirjautuminen#Rekisteroinnin_aloitus_8211_uusi_tai_olemassaoleva_kayttaja\" target=\"_blank\">\"Omat tiedot\"-sivulta</a>. Jos sinulla ei ole käyttäjätiliä palvelussa, jatka Yritystilin rekisteröintiin valitsemalla alta \"Rekisteröi yritys\"."
-"register.company.create.help!" "sv" ""
+"register.company.create.help" "fi" "Jos sinulla on jo käyttäjätili Lupapisteessä, pystyt rekisteröimään Yritystilin <a href=\"https://www.lupapiste.fi/ohjeet/yrityksille/yritystilin-rekisterointi-ja-kirjautuminen#Rekisteroinnin_aloitus_8211_uusi_tai_olemassaoleva_kayttaja\" target=\"_blank\">\"Omat tiedot\"-sivulta</a>. Jos sinulla ei ole käyttäjätiliä palvelussa, jatka Yritystilin rekisteröintiin valitsemalla alta \"Rekisteröi yritys\"."
+"register.company.create.help" "sv" "Om du har ett användarkonto hos Lupapiste, kan du registrera dig via Företagskonto:s <a href=\"https://www.lupapiste.fi/ohjeet/yrityksille/yritystilin-rekisterointi-ja-kirjautuminen#Rekisteroinnin_aloitus_8211_uusi_tai_olemassaoleva_kayttaja\" target=\"_blank\"> \"Egna sidor\"</a>. Om du inte har ett användarkonto hos tjänsten, fortsätt till Företagskontos:s registrering genom att välja \"Registrera företag\" här nedanom."
 "register.company.custom.title" "fi" "Räätälöity yritystili"
 "register.company.custom.title" "sv" "Skräddarsytt företagskonto"
 "register.company.form.accountType" "fi" "Tilityyppi"
@@ -3789,8 +3790,8 @@
 "register.company.form.personId" "sv" "Personnummer"
 "register.company.header" "fi" "Rekisteröi organisaatiollesi maksullinen Lupapisteen yritystili"
 "register.company.header" "sv" "Registrera ett avgiftsbelagd företagskonto för din organisation i Lupapiste"
-"register.company.info!" "fi" "Yrityksen edustaja voi joko rekisteröityä veloituksetta käyttäjäksi (yllä oleva vaihtoehto) tai avata organisaatiolle maksullisen <a href=\"https://www.lupapiste.fi/yrityksille\" target=\"_blank\">Yritystilin</a> yhteistä hankehallintaa varten. Yritystilin avulla organisaation Lupapiste-hankkeita voidaan hallinnoida ja seurata yhteisessä työtilassa sekä hoitaa valtuutukset hankkeille keskitetysti. Kun <a href=\"https://www.lupapiste.fi/ohjeet/yrityksille/yritystilin-rekisterointi-ja-kirjautuminen\" target=\"_blank\">rekisteröit valitsemasi Yritystilin</a> ja hyväksyt <a href=\"https://www.lupapiste.fi/wp-content/uploads/2015/12/Lupapiste_Yritystilisopimus_Pohja.pdf\" target=\"_blank\">Yritystilisopimuksen</a>, luomme sinulle pääkäyttäjätilin, jonka avulla voit hallita yrityksesi tietoja, Yritystilin käyttäjiä sekä hyväksyä Yritystilille osoitetut valtuutuskutsut. Yritystilisopimus tehdään helposti sähköisen allekirjoituspalvelun avulla. Yritystilisopimuksen allekirjoituksessa käytetään henkilökohtaisia pankkitunnuksia, jotta saamme varmuuden allekirjoittajan henkilöllisyydestä. Varaathan siis pankkitunnukset lähettyvillesi."
-"register.company.info!" "sv" ""
+"register.company.info" "fi" "Yrityksen edustaja voi joko rekisteröityä veloituksetta käyttäjäksi (yllä oleva vaihtoehto) tai avata organisaatiolle maksullisen <a href=\"https://www.lupapiste.fi/yrityksille\" target=\"_blank\">Yritystilin</a> yhteistä hankehallintaa varten. Yritystilin avulla organisaation Lupapiste-hankkeita voidaan hallinnoida ja seurata yhteisessä työtilassa sekä hoitaa valtuutukset hankkeille keskitetysti. Kun <a href=\"https://www.lupapiste.fi/ohjeet/yrityksille/yritystilin-rekisterointi-ja-kirjautuminen\" target=\"_blank\">rekisteröit valitsemasi Yritystilin</a> ja hyväksyt <a href=\"https://www.lupapiste.fi/wp-content/uploads/2015/12/Lupapiste_Yritystilisopimus_Pohja.pdf\" target=\"_blank\">Yritystilisopimuksen</a>, luomme sinulle pääkäyttäjätilin, jonka avulla voit hallita yrityksesi tietoja, Yritystilin käyttäjiä sekä hyväksyä Yritystilille osoitetut valtuutuskutsut. Yritystilisopimus tehdään helposti sähköisen allekirjoituspalvelun avulla. Yritystilisopimuksen allekirjoituksessa käytetään henkilökohtaisia pankkitunnuksia, jotta saamme varmuuden allekirjoittajan henkilöllisyydestä. Varaathan siis pankkitunnukset lähettyvillesi."
+"register.company.info" "sv" "Företrädaren för företaget kan endera registrera sig avgiftsfritt som användare (ovanstående alternativ) eller öppna ett avgiftsbelagt <a href=\"https://www.lupapiste.fi/yrityksille\" target=\"_blank\">företagskonto</a> åt organisationen, för gemensam projekthantering. Med hjälp av företagskontot kan man hantera och följa med organisationens Lupapiste-projekt i ett gemensamt forum, samt sköta fullmakterna för projekten centrerat. Då du <a href=\"https://www.lupapiste.fi/ohjeet/yrityksille/yritystilin-rekisterointi-ja-kirjautuminen\" target=\"_blank\">registrerar det Företagskonto du valt</a> och godkänner <a href=\"https://www.lupapiste.fi/wp-content/uploads/2015/12/Lupapiste_Yritystilisopimus_Pohja.pdf\" target=\"_blank\">Företagskontoavtalet</a>, skapas ett huvudanvändarkonto åt dig, med hjälp av vilket du kan hantera ditt företags uppgifter, Företagskontots användare samt godkänna fullmaktsinbjudningar som adresserats till Företagskontot. Företagskontoavtalet ingås enkelt med hjälp av en elektronisk signeringstjänst. Vid underteckning av Företagskontoavtalet används personliga bankkoder för att signerarens identitet ska kunna bekräftas. Reservera alltså dina bankkoder i närheten."
 "register.company.onnistuu.desc" "fi" "Onnistuu.fi tarjoaa sähköisen, turvallisen sopimuspalvelun, jossa voit allekirjoittaa sopimuksia pankkitunnuksilla tai mobiilivarmarmenteella."
 "register.company.onnistuu.desc" "sv" "Onnistuu.fi erbjuder en elektronisk, trygg avtalstjänst, där du kan underteckna avtal med bankkoder eller mobilcertifikat."
 "register.company.onnistuu.poweredby" "fi" "Palvelun tarjoaa Suomen Onlineallekirjoitus Oy."
@@ -4798,9 +4799,9 @@
 "verdict.status.42" "fi" "Ei tiedossa"
 "verdict.status.42" "sv" "Okänd"
 "verdict.status.43" "fi" "Kiinteistötoimitus"
-"verdict.status.43" "sv" ""
+"verdict.status.43" "sv" "Fastighetsförrättning"
 "verdict.status.44" "fi" "Kiinteistörekisterin pitäjän päätös"
-"verdict.status.44" "sv" ""
+"verdict.status.44" "sv" "Fastighetsregisterförarens beslut"
 "verdict.status.5" "fi" "Myönnetty aloitusoikeudella"
 "verdict.status.5" "sv" "Beviljat med tillstånd att påbörja"
 "verdict.status.6" "fi" "Ehdollinen"
@@ -4910,27 +4911,27 @@
 "YM" "fi" "Muut ympäristöluvat"
 "YM" "sv" "Övriga miljölov"
 "attachment.not-public-attachment" "fi" "Liite ei ole julkinen"
-"attachment.not-public-attachment" "sv" ""
+"attachment.not-public-attachment" "sv" "Bilagan är inte offentlig"
 "statement.reply-draft-not-visible" "fi" "Vastine tulee näkyviin tähän, kun se on annettu."
-"statement.reply-draft-not-visible" "sv" ""
+"statement.reply-draft-not-visible" "sv" "Svaromålet syns här då det har givits"
 "application.statement.reply" "fi" "Vastine"
-"application.statement.reply" "sv" ""
+"application.statement.reply" "sv" "Svaromål"
 "statement.reply.state.replyable" "fi" "Vastine pyydetty"
-"statement.reply.state.replyable" "sv" ""
+"statement.reply.state.replyable" "sv" "Svaromål begärt"
 "statement.reply.state.replied" "fi" "Vastine annettu"
-"statement.reply.state.replied" "sv" ""
+"statement.reply.state.replied" "sv" "Svaromål givet"
 "error.startdate-before-enddate" "fi" "Alkupäivämäärä on ennen loppupäivämäärää"
-"error.startdate-before-enddate" "sv" ""
+"error.startdate-before-enddate" "sv" "Startdatumet är före slutdatumet"
 "error.service-lockdown" "fi" "Palvelu on hetkellisesti lukutilassa ylläpitotoimien vuoksi. Voit selailla hakemuksia, mutta tietojen muokkaus on tilapäisesti estetty. Pahoittelemme häiriötä!"
-"error.service-lockdown" "sv" ""
+"error.service-lockdown" "sv" "Tjänsten är tillfälligt i läsläge på grund av uppdateringar. Du kan granska ansökningar, men ändringar i uppgifter kan inte göras för tillfället. Vi beklagar störningen!"
 "statement.draft-is-not-visible" "fi" "Lausunto tulee näkyviin tähän, kun se on annettu."
-"statement.draft-is-not-visible" "sv" ""
+"statement.draft-is-not-visible" "sv" "Utlåtandet syns här då det har givits."
 "error.organization.duplicate-scope" "fi" "Kunnalle on jo määritelty kyseinen lupatyyppi"
-"error.organization.duplicate-scope" "sv" ""
+"error.organization.duplicate-scope" "sv" "Ifrågavarande tillståndstyp har redan definierats för kommunen"
 "error.invalid-municipality" "fi" "Virheellinen kuntanumero"
-"error.invalid-municipality" "sv" ""
+"error.invalid-municipality" "sv" "Felaktig kommunnummer"
 "caseFile.tab" "fi" "Käsittelytiedot"
-"caseFile.tab" "sv" ""
+"caseFile.tab" "sv" "Handläggningsuppgifter"
 "help.bulletin.verdicts" "fi" " "
 "help.bulletin.verdicts" "sv" " "
 "help.bulletin.comments" "fi" " "
@@ -4938,6 +4939,6 @@
 "help.bulletin.attachments" "fi" " "
 "help.bulletin.attachments" "sv" " "
 "arkistoidaan" "fi" "Arkistoidaan"
-"arkistoidaan" "sv" ""
+"arkistoidaan" "sv" "Arkiveras"
 "lisaaja" "fi" "Lisääjä"
-"lisaaja" "sv" ""
+"lisaaja" "sv" "Lisääjä"
