--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -197,7 +197,7 @@
 "hankkeen-kuvaus-vesihuolto.kuvaus" "fi" "Perustelut vapautuksen tarpeelle"
 "hankkeen-kuvaus-vesihuolto.kuvaus" "sv" "Motivering till behovet av befrielse"
 "help.rasitetoimitus" "fi" "Rasitetoimituksissa kohteena oleva kiinteistö on rasitettu (rasitteen antaja) ja kaikki lisäkohdekiinteistöt ovat oikeutettuja (rasitteen saajia)."
-"help.rasitetoimitus" "sv" ""
+"help.rasitetoimitus" "sv" "Fastigheten som är föremål för servitutsförrättningarna är belastad (tjänande fastighet) och alla tilläggsfastigheter är berättigade (härskande fastigheter)."
 "help.VVVL.applicationInfoDesc" "fi" "Tällä välilehdellä näet valitsemaasi toimenpiteeseen liittyvät lomaketiedot."
 "help.VVVL.applicationInfoDesc" "sv" "Under denna flik ser du uppgifter om blanketter för valda åtgärder."
 "help.VVVL.attachmentsDesc" "fi" "Tänne voit lisätä hakemukseen kuuluvia liitteitä. Viranomainen voi myös pyytää sinulta tarpeellisia liitteitä. Nämä pyynnöt ja korjauksia vaativat liitteet merkitään taulukossa punaisella lipulla. Viranomainen voi myös merkitä liitteen <b>alustavasti hyväksytyksi tai korjattavaksi. Tämä ei ole vielä virallinen hyväksyntä, sillä sitä varten hakemus pitää käsitellä kunnan päätöksentekoprosessin mukaisesti</b>."
@@ -1063,11 +1063,11 @@
 "maankayton-muutos.kuvaus" "fi" "Maankäytön muutos"
 "maankayton-muutos.kuvaus" "sv" "Ändring av markanvändnig"
 "maankayton-muutos.uusiKytkin" "fi" "Toimenpide"
-"maankayton-muutos.uusiKytkin" "sv" ""
+"maankayton-muutos.uusiKytkin" "sv" "Åtgärd"
 "maankayton-muutos.uusiKytkin.muutos" "fi" "Muutos olemassaolevaan"
-"maankayton-muutos.uusiKytkin.muutos" "sv" ""
+"maankayton-muutos.uusiKytkin.muutos" "sv" "Ändring till befintlig"
 "maankayton-muutos.uusiKytkin.uusi" "fi" "Uusi"
-"maankayton-muutos.uusiKytkin.uusi" "sv" ""
+"maankayton-muutos.uusiKytkin.uusi" "sv" "Ny"
 "maanmittaustoimitukset._group_label" "fi" "Perustelut"
 "maanmittaustoimitukset._group_label" "sv" "Motiveringar"
 "maanmittaustoimitukset.kuvaus" "fi" "Perustelut"
@@ -1327,7 +1327,7 @@
 "osapuoli.patevyysvaatimusluokka.ei tiedossa" "fi" "Ei tiedossa"
 "osapuoli.patevyysvaatimusluokka.ei tiedossa" "sv" "Inte känt"
 "osapuoli.suoramarkkinointilupa" "fi" "Tietoja saa luovuttaa suoramarkkinointia sekä mielipide- ja markkinatutkimusta varten."
-"osapuoli.suoramarkkinointilupa" "sv" ""
+"osapuoli.suoramarkkinointilupa" "sv" "Uppgifterna får överlämnas för direktmarknadsföring och åsikts- och marknadsundersökningar."
 "osapuoli.suunnittelija.kuntaRoolikoodi._group_label" "fi" "Suunnittelurooli"
 "osapuoli.suunnittelija.kuntaRoolikoodi._group_label" "sv" "Planeringsroll"
 "osapuoli.suunnittelija.kuntaRoolikoodi.ARK-rakennussuunnittelija" "fi" "ARK-rakennussuunnittelija"
@@ -2253,25 +2253,25 @@
 "purku.verkostoliittymat.viemariKytkin" "fi" "Jätevesi / Viemäri"
 "purku.verkostoliittymat.viemariKytkin" "sv" "Avlopp"
 "rajankaynti._group_label" "fi" "Rajankäynti ja muut kiinteistömääritykset"
-"rajankaynti._group_label" "sv" ""
+"rajankaynti._group_label" "sv" "Rågång och övriga fastighetsbestämmelser"
 "rajankaynti.kuvaus" "fi" "Kuvaus"
-"rajankaynti.kuvaus" "sv" ""
+"rajankaynti.kuvaus" "sv" "Beskrivning"
 "rajankaynti.rajankayntiTyyppi._group_label" "fi" "Selvitettävä asia"
-"rajankaynti.rajankayntiTyyppi._group_label" "sv" ""
+"rajankaynti.rajankayntiTyyppi._group_label" "sv" "Ärende att utreda"
 "rajankaynti.rajankayntiTyyppi.Epäselvyys siitä, mihin rekisteriyksikköön jokin alue kuuluu" "fi" "Epäselvyys siitä, mihin rekisteriyksikköön jokin alue kuuluu"
-"rajankaynti.rajankayntiTyyppi.Epäselvyys siitä, mihin rekisteriyksikköön jokin alue kuuluu" "sv" ""
+"rajankaynti.rajankayntiTyyppi.Epäselvyys siitä, mihin rekisteriyksikköön jokin alue kuuluu" "sv" "Oklarheter i fråga om vilken registerenhet ett område tillhör"
 "rajankaynti.rajankayntiTyyppi.Epäselvän, kadonneen tai turmeltuneen toimitusasiakirjan tai kartan sisältö" "fi" "Epäselvän, kadonneen tai turmeltuneen toimitusasiakirjan tai kartan sisältö"
-"rajankaynti.rajankayntiTyyppi.Epäselvän, kadonneen tai turmeltuneen toimitusasiakirjan tai kartan sisältö" "sv" ""
+"rajankaynti.rajankayntiTyyppi.Epäselvän, kadonneen tai turmeltuneen toimitusasiakirjan tai kartan sisältö" "sv" "Innehållet av en otydlig, försvunnen eller förstörd förrättningshandling eller karta"
 "rajankaynti.rajankayntiTyyppi.Kiinteistön osuus yhteiseen alueeseen tai yhteiseen erityiseen etuuteen ja osuudensuuruus sekä kiinteistölle kuuluva erityinen etuus" "fi" "Kiinteistön osuus yhteiseen alueeseen tai yhteiseen erityiseen etuuteen ja osuudensuuruus sekä kiinteistölle kuuluva erityinen etuus"
-"rajankaynti.rajankayntiTyyppi.Kiinteistön osuus yhteiseen alueeseen tai yhteiseen erityiseen etuuteen ja osuudensuuruus sekä kiinteistölle kuuluva erityinen etuus" "sv" ""
+"rajankaynti.rajankayntiTyyppi.Kiinteistön osuus yhteiseen alueeseen tai yhteiseen erityiseen etuuteen ja osuudensuuruus sekä kiinteistölle kuuluva erityinen etuus" "sv" "Fastighetens andel i ett samfällt område eller i en gemensam särskild förmån och andelens storlek eller en särskild förmån som hör till fastigheten"
 "rajankaynti.rajankayntiTyyppi.Rajan paikkaa ja rajamerkkiä koskeva epäselvyys (rajankäynti)" "fi" "Rajan paikkaa ja rajamerkkiä koskeva epäselvyys (rajankäynti)"
-"rajankaynti.rajankayntiTyyppi.Rajan paikkaa ja rajamerkkiä koskeva epäselvyys (rajankäynti)" "sv" ""
+"rajankaynti.rajankayntiTyyppi.Rajan paikkaa ja rajamerkkiä koskeva epäselvyys (rajankäynti)" "sv" "Oklarheter som gäller råns sträckning eller råmärken (rågång)"
 "rajankaynti.rajankayntiTyyppi.Rasiteoikeutta ja rasitteen sijaintia koskeva epäselvyys" "fi" "Rasiteoikeutta ja rasitteen sijaintia koskeva epäselvyys"
-"rajankaynti.rajankayntiTyyppi.Rasiteoikeutta ja rasitteen sijaintia koskeva epäselvyys" "sv" ""
+"rajankaynti.rajankayntiTyyppi.Rasiteoikeutta ja rasitteen sijaintia koskeva epäselvyys" "sv" "Oklarheter som gäller en servitutsrätt eller servitutets placering"
 "rajankaynti.rajankayntiTyyppi.Ristiriitaisista toimitusasiakirjoista tai kartoista johtuva epäselvyys" "fi" "Ristiriitaisista toimitusasiakirjoista tai kartoista johtuva epäselvyys"
-"rajankaynti.rajankayntiTyyppi.Ristiriitaisista toimitusasiakirjoista tai kartoista johtuva epäselvyys" "sv" ""
+"rajankaynti.rajankayntiTyyppi.Ristiriitaisista toimitusasiakirjoista tai kartoista johtuva epäselvyys" "sv" "Oklarheter som beror på motstridiga förrättningshandlingar eller förrättningskartor"
 "rajankaynti.rajankayntiTyyppi.Yhteisen alueen tai yhteisen erityisen etuuden osakaskiinteistöt ja niille kuuluvien osuuksien suuruudet" "fi" "Yhteisen alueen tai yhteisen erityisen etuuden osakaskiinteistöt ja niille kuuluvien osuuksien suuruudet"
-"rajankaynti.rajankayntiTyyppi.Yhteisen alueen tai yhteisen erityisen etuuden osakaskiinteistöt ja niille kuuluvien osuuksien suuruudet" "sv" ""
+"rajankaynti.rajankayntiTyyppi.Yhteisen alueen tai yhteisen erityisen etuuden osakaskiinteistöt ja niille kuuluvien osuuksien suuruudet" "sv" "Fastighetsdelägare i ett samfällt område eller i en gemensam särskild förmån och storleken av fastigheternas andelar"
 "rakennelman-kayttotarkoitus" "fi" "Rakennelman käyttötarkoitus"
 "rakennelman-kayttotarkoitus" "sv" "Konstruktionens användningssyfte"
 "rakennelman-kayttotarkoitus.Aallonmurtaja" "fi" "Aallonmurtaja"
@@ -4113,8 +4113,11 @@
 "rakennusjateselvitys.contact._group_label" "fi" ""
 "rakennusjateselvitys.contact._group_label" "sv" ""
 "rakennusjateselvitys.contact.name" "fi" "Yhteyshenkilön nimi"
+"rakennusjateselvitys.contact.name" "sv" "Kontaktpersonens namn"
 "rakennusjateselvitys.contact.phone" "fi" "Puhelinnumero"
+"rakennusjateselvitys.contact.phone" "sv" "Telefonnummer"
 "rakennusjateselvitys.contact.email" "fi" "Sähköpostiosoite"
+"rakennusjateselvitys.contact.email" "sv" "Epostadress"
 "rakennusjatesuunnitelma._append_label" "fi" "Lisää"
 "rakennusjatesuunnitelma._append_label" "sv" "Tillägg"
 "rakennusjatesuunnitelma._group_label" "fi" "Rakennus- ja purkujätesuunnitelma"
@@ -5474,32 +5477,32 @@
 "hankkeestaIlmoitettu.groupHelpText" "fi" "Hakijana vakuutan, että rakennuspaikalla on ilmoitettu hankkeesta kyltillä seuraavasta päivämäärästä alkaen."
 "hankkeestaIlmoitettu.groupHelpText" "sv" "Som sökande intygar jag att det på byggplatsen finns en skylt som informerar om projektet från och med"
 "osapuoli.kuntaRoolikoodi.rakennussuunnittelija" "fi" "Rakennussuunnittelija"
-"osapuoli.kuntaRoolikoodi.rakennussuunnittelija" "sv" ""
+"osapuoli.kuntaRoolikoodi.rakennussuunnittelija" "sv" "Byggprojekterare"
 "osapuoli.kuntaRoolikoodi.kantavien rakenteiden suunnittelija" "fi" "Kantavien rakenteiden suunnittelija"
-"osapuoli.kuntaRoolikoodi.kantavien rakenteiden suunnittelija" "sv" ""
+"osapuoli.kuntaRoolikoodi.kantavien rakenteiden suunnittelija" "sv" "Projekterare för bärande konstruktioner"
 "osapuoli.kuntaRoolikoodi.pohjarakenteiden suunnittelija" "fi" "Pohjarakenteiden suunnittelija"
-"osapuoli.kuntaRoolikoodi.pohjarakenteiden suunnittelija" "sv" ""
+"osapuoli.kuntaRoolikoodi.pohjarakenteiden suunnittelija" "sv" "Grundbyggnadsprojekterare"
 "osapuoli.kuntaRoolikoodi.ilmanvaihdon suunnittelija" "fi" "Ilmanvaihdon suunnittelija"
-"osapuoli.kuntaRoolikoodi.ilmanvaihdon suunnittelija" "sv" ""
+"osapuoli.kuntaRoolikoodi.ilmanvaihdon suunnittelija" "sv" "Ventilationsplanerare"
 "osapuoli.kuntaRoolikoodi.vesiviemarisuunnittelija" "fi" "Kiinteistön vesi- ja viemäröintilaitteiston suunnittelija"
-"osapuoli.kuntaRoolikoodi.vesiviemarisuunnittelija" "sv" ""
+"osapuoli.kuntaRoolikoodi.vesiviemarisuunnittelija" "sv" "Fastighetens vatten- och avloppsanläggningsplanerare"
 "osapuoli.kuntaRoolikoodi.rakennusfysikaalinen suunnittelija" "fi" "Rakennusfysikaalinen suunnittelija"
-"osapuoli.kuntaRoolikoodi.rakennusfysikaalinen suunnittelija" "sv" ""
+"osapuoli.kuntaRoolikoodi.rakennusfysikaalinen suunnittelija" "sv" "Byggnadsfysikalisk planerare"
 "osapuoli.kuntaRoolikoodi.kosteusvaurion korjaustyön suunnittelija" "fi" "Kosteusvaurion korjaustyön suunnittelija"
-"osapuoli.kuntaRoolikoodi.kosteusvaurion korjaustyön suunnittelija" "sv" ""
+"osapuoli.kuntaRoolikoodi.kosteusvaurion korjaustyön suunnittelija" "sv" "Planerare för reparation av fuktskada"
 "task-katselmus.katselmus.huomautukset.maaraAika.export" "fi" "Huomautuksen määräaika"
-"task-katselmus.katselmus.huomautukset.maaraAika.export" "sv" ""
+"task-katselmus.katselmus.huomautukset.maaraAika.export" "sv" "Tidsfrist för anmärkningen"
 "task-katselmus.katselmus.huomautukset.toteaja.export" "fi" "Huomautuksen toteaja"
-"task-katselmus.katselmus.huomautukset.toteaja.export" "sv" ""
+"task-katselmus.katselmus.huomautukset.toteaja.export" "sv" "Konstaterare av anmärkningen"
 "task-katselmus.katselmus.huomautukset.toteamisHetki.export" "fi" "Huomautuksen toteamishetki"
-"task-katselmus.katselmus.huomautukset.toteamisHetki.export" "sv" ""
+"task-katselmus.katselmus.huomautukset.toteamisHetki.export" "sv" "Tid för konstaterandet av anmärkningen"
 "task-katselmus.rakennus.kiinteistotunnus" "fi" "Kiinteistötunnus"
-"task-katselmus.rakennus.kiinteistotunnus" "sv" ""
+"task-katselmus.rakennus.kiinteistotunnus" "sv" "Fastighetsbeteckning"
 "task-katselmus.rakennus.rakennusnumero" "fi" "Rakennusnumero"
-"task-katselmus.rakennus.rakennusnumero" "sv" ""
+"task-katselmus.rakennus.rakennusnumero" "sv" "Byggnadsnummer"
 "task-katselmus.rakennus.jarjestysnumero" "fi" "Järjestysnumero"
-"task-katselmus.rakennus.jarjestysnumero" "sv" ""
+"task-katselmus.rakennus.jarjestysnumero" "sv" "Ordningsnummer"
 "task-katselmus.rakennus.valtakunnallinenNumero" "fi" "Valtakunnallinen numero"
-"task-katselmus.rakennus.valtakunnallinenNumero" "sv" ""
+"task-katselmus.rakennus.valtakunnallinenNumero" "sv" "Landsomfattande nummer"
 "task-katselmus.rakennus.kunnanSisainenPysyvaRakennusnumero" "fi" "Kunna sisäinen pysyvä numero"
-"task-katselmus.rakennus.kunnanSisainenPysyvaRakennusnumero" "sv" ""
+"task-katselmus.rakennus.kunnanSisainenPysyvaRakennusnumero" "sv" "Beständig nummer inom kommunen"
