Change wording of the attachment archivability indicator

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -4941,4 +4941,6 @@
 "arkistoidaan" "fi" "Arkistoidaan"
 "arkistoidaan" "sv" "Arkiveras"
 "lisaaja" "fi" "Lisääjä"
-"lisaaja" "sv" "Lisääjä"
+"lisaaja" "sv" ""
+"attachment.archivability" "fi" "Tiedosto soveltuu pysyvään säilytykseen"
+"attachment.archivability" "sv" ""
