--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -1530,6 +1530,8 @@
 "authority.already.in.organization.dialog.content" "sv" "Användaren har redan tidigare tillsatts i organisationen."
 "authorityAdmin" "fi" "Pääkäyttäjä"
 "authorityAdmin" "sv" "Huvudanvändare"
+"authority-fills" "fi" "Viranomainen täyttää"
+"authority-fills" "sv" "Myndigheten fyller"
 "authority-invite.title" "fi" "Kutsu Lupapiste-palvelun viranomaiskäyttäjäksi"
 "authority-invite.title" "sv" "Inbjudan som myndighetanvändare av Lupapiste-service"
 "authority-notification.title" "fi" "Ilmoitus käyttäjätilin liittämisestä organisaation viranomaiskäyttäjäksi"
