Guest authorities no longer organization users.

--- a/resources/i18n/guests.txt
+++ b/resources/i18n/guests.txt
@@ -22,8 +22,8 @@
 "application-guests.unsubscribe" "sv" "Återta anmälningar"
 "application-guests.user" "fi" "Lukuoikeus-käyttäjä"
 "application-guests.user" "sv" "Läsrättsanvändare"
-"auth-admin.guest-authorities.help" "fi" "Käyttäjät, joille viranomainen voi antaa lukuoikeuden yksittäiselle hankkeelle. Nämä käyttäjät liitetään myös organisaation viranomaisiksi. Tarvittaessa luodaan uusi käyttäjä."
-"auth-admin.guest-authorities.help" "sv" "Användare för vilka myndigheten kan ge läsrätt för enskilda projekt. Dessa användare sätts även till som organisationens myndigheter. Vid behov skapas en ny användare."
+"auth-admin.guest-authorities.help" "fi" "Käyttäjät, joille viranomainen voi antaa lukuoikeuden yksittäiselle hankkeelle."
+"auth-admin.guest-authorities.help" "sv" "Användare för vilka myndigheten kan ge läsrätt för enskilda projekt."
 "authorityrole.guestAuthority" "fi" "Hankekohtainen lukuoikeus (kutsuttava)"
 "authorityrole.guestAuthority" "sv" "Projektenlig läsrätt (ska bjudas in)"
 "error.already-has-access" "fi" "Käyttäjällä on jo lukuoikeus hakemukselle."
