Guest authority removal.
When authority admin removes guest authority
from an organization, every related application
is pruned as well.

--- a/resources/i18n/guests.txt
+++ b/resources/i18n/guests.txt
@@ -42,3 +42,5 @@
 "guest-authority.has-access" "sv" "Användaren har redan läsrätt till alla organisationens ansökningar."
 "guest-authority.name" "fi" "Nimi"
 "guest-authority.name" "sv" "Namn"
+"guest-authority.remove-title" "fi" "Poista hankekohtainen lukuoikeus"
+"guest-authority.remove-body" "fi" "Oletko varma? Samalla käyttäjältä poistetaan jo annetut hankekohtaiset lukuoikeudet tämän organisaation hakemuksilta."
