LPK-1354 i18n for construction waste report pdf

--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -4130,6 +4130,52 @@
 "rakennusjatesuunnitelma.vaarallisetAineet.painoT" "sv" "Vikt i ton"
 "rakennusjatesuunnitelma.vaarallisetAineet.suunniteltuMaara" "fi" "Arvioitu määrä"
 "rakennusjatesuunnitelma.vaarallisetAineet.suunniteltuMaara" "sv" "Uppskattad mängd"
+"rakennusjateselvitys.rakennusJaPurkujate.suunniteltuJate.suunniteltuMaara" "fi" "Arvioitu määrä"
+"rakennusjateselvitys.rakennusJaPurkujate.suunniteltuJate.suunniteltuMaara" "sv" "Uppskattad mängd"
+"rakennusjateselvitys.rakennusJaPurkujate.suunniteltuJate.toteutunutMaara" "fi" "Toteutunut määrä"
+"rakennusjateselvitys.rakennusJaPurkujate.suunniteltuJate.toteutunutMaara" "sv" "Förverkligad mängd"
+"rakennusjateselvitys.rakennusJaPurkujate.suunniteltuJate.painoT" "fi" "Paino tonnia"
+"rakennusjateselvitys.rakennusJaPurkujate.suunniteltuJate.painoT" "sv" "Vikt i ton"
+"rakennusjateselvitys.rakennusJaPurkujate.suunniteltuJate.jatteenToimituspaikka" "fi" "Toimituspaikka"
+"rakennusjateselvitys.rakennusJaPurkujate.suunniteltuJate.jatteenToimituspaikka" "sv" "Leveransplats"
+"rakennusjateselvitys.vaarallisetAineet.suunniteltuJate.suunniteltuMaara" "fi" "Arvioitu määrä"
+"rakennusjateselvitys.vaarallisetAineet.suunniteltuJate.suunniteltuMaara" "sv" "Uppskattad mängd"
+"rakennusjateselvitys.vaarallisetAineet.suunniteltuJate.toteutunutMaara" "fi" "Toteutunut määrä"
+"rakennusjateselvitys.vaarallisetAineet.suunniteltuJate.toteutunutMaara" "sv" "Förverkligad mängd"
+"rakennusjateselvitys.vaarallisetAineet.suunniteltuJate.painoT" "fi" "Paino tonnia"
+"rakennusjateselvitys.vaarallisetAineet.suunniteltuJate.painoT" "sv" "Vikt i ton"
+"rakennusjateselvitys.vaarallisetAineet.suunniteltuJate.jatteenToimituspaikka" "fi" "Toimituspaikka"
+"rakennusjateselvitys.vaarallisetAineet.suunniteltuJate.jatteenToimituspaikka" "sv" "Leveransplats"
+"available-materials" "fi" ""
+"available-materials" "sv" ""
+"rakennusjateselvitys.availableMaterials.kuvaus" "fi" "Kuvaus"
+"rakennusjateselvitys.availableMaterials.kuvaus" "sv" "Beskrivning"
+"rakennusjateselvitys.availableMaterials.saatavilla" "fi" "Tillgänglig"
+"rakennusjateselvitys.availableMaterials.saatavilla" "sv" "Tillgänglig"
+"rakennusjateselvitys.availableMaterials.maara" "fi" "Määrä"
+"rakennusjateselvitys.availableMaterials.maara" "sv" "Mängd"
+"rakennusjateselvitys.availableMaterials.aines" "fi" "Aines"
+"rakennusjateselvitys.availableMaterials.aines" "sv" "Substans"
+"rakennusjateselvitys.vaarallisetAineet.suunnittelematonJate.jatteenToimituspaikka" "fi" "Toimituspaikka"
+"rakennusjateselvitys.vaarallisetAineet.suunnittelematonJate.jatteenToimituspaikka" "sv" "Leveransplats"
+"rakennusjateselvitys.vaarallisetAineet.suunnittelematonJate.painoT" "fi" "Paino tonnia"
+"rakennusjateselvitys.vaarallisetAineet.suunnittelematonJate.painoT" "sv" "Vikt i ton"
+"rakennusjateselvitys.vaarallisetAineet.suunnittelematonJate.toteutunutMaara" "fi" "Toteutunut määrä"
+"rakennusjateselvitys.vaarallisetAineet.suunnittelematonJate.toteutunutMaara" "sv" "Förverkligad mängd"
+"rakennusjateselvitys.rakennusJaPurkujate.suunnittelematonJate.jatteenToimituspaikka" "fi" "Toimituspaikka"
+"rakennusjateselvitys.rakennusJaPurkujate.suunnittelematonJate.jatteenToimituspaikka" "sv" "Leveransplats"
+"rakennusjateselvitys.rakennusJaPurkujate.suunnittelematonJate.painoT" "fi" "Paino tonnia"
+"rakennusjateselvitys.rakennusJaPurkujate.suunnittelematonJate.painoT" "sv" "Vikt i ton"
+"rakennusjateselvitys.rakennusJaPurkujate.suunnittelematonJate.toteutunutMaara" "fi" "Toteutunut määrä"
+"rakennusjateselvitys.rakennusJaPurkujate.suunnittelematonJate.toteutunutMaara" "sv" "Förverkligad mängd"
+"rakennusjateselvitys.rakennusJaPurkujate.suunnittelematonJate._group_label" "fi" ""
+"rakennusjateselvitys.rakennusJaPurkujate.suunnittelematonJate._group_label" "sv" ""
+"rakennusjateselvitys.rakennusJaPurkujate.suunniteltuJate._group_label" "fi" ""
+"rakennusjateselvitys.rakennusJaPurkujate.suunniteltuJate._group_label" "sv" ""
+"rakennusjateselvitys.vaarallisetAineet.suunnittelematonJate._group_label" "fi" ""
+"rakennusjateselvitys.vaarallisetAineet.suunnittelematonJate._group_label" "sv" ""
+"rakennusjateselvitys.vaarallisetAineet.suunniteltuJate._group_label" "fi" ""
+"rakennusjateselvitys.vaarallisetAineet.suunniteltuJate._group_label" "sv" ""
 "rakennusnro" "fi" "Valitse rakennus"
 "rakennusnro" "sv" "Välj byggnad"
 "rakennuspaikka._group_label" "fi" "Rakennuspaikka"
